Added Plausible analytics script to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haci Cömert</title>
+    <script
+      defer
+      data-domain="hacicomert.se"
+      src="https://plausible.io/js/script.js"></script>
+
     <!-- Google tag (gtag.js) -->
     <script
       async
